# macro-keyboard

./: .gitignore  .gitlab-ci.yml  .gitmodules  LICENSE  README.md  sdkconfig.defaults
firmware/: CMakeLists.txt  sdkconfig.defaults
firmware/keyboards/: CMakeLists.txt  Kconfig.projbuild
firmware/keyboards/default/: config.h  config.json  keymap.c  keymap.h
firmware/keyboards/dev/: keyboard-layout.json  keymap.c
firmware/keyboards/home/: config.h  keymap.c  (+1 more)
firmware/main/: CMakeLists.txt  Macro-Keyboard.c  battery.h  ble.c  ble.h  ble_hidd.c  ble_hidd.h  config.h  dynamic_keymap.c  dynamic_keymap.h  esp_hidd_prf_api.c  events.h  hid_dev.c  hid_device_le_prf.c  idf_component.yml  key_definitions.h  keyboard.c  keyboard.h  keymap.h  keymap_introspection.c  keymap_introspection.h  layers.c  layers.h  leds.c  leds.h  matrix.c  matrix.h  memory.c  memory.h  toggle_switch.h  usb.c  usb.h  via.c  via.h
firmware/scripts/: app_desc.py  create_manifest.py  test_hid.py
hardware/Macro_Keyboard_V1.0/: Macro_Keyboard_V1.0.kicad_pcb  Macro_Keyboard_V1.0.kicad_pro  Macro_Keyboard_V1.0.kicad_sch  fp-lib-table  sym-lib-table
hardware/Macro_Keyboard_V1.1/: Macro_Keyboard_V1.1.kicad_pcb  Macro_Keyboard_V1.1.kicad_pro  Macro_Keyboard_V1.1.kicad_sch
main/: CMakeLists.txt  Macro-Keyboard.c  battery.c  battery.h  ble_hidd.c  ble_hidd.h  config.h  esp_hidd_prf_api.c  events.h  hid_device_le_prf.c  hidd_le_prf_int.h  key_definitions.h  keyboard.c  keyboard.h  keymap.c  keymap.h  leds.c  leds.h  matrix.c  matrix.h  memory.c  memory.h  toggle_switch.c  toggle_switch.h  usb.c  usb.h
(+38 files in other folders)
